# perl-ODBC

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  META6.json  README.md
cmake/: SetupBoost.cmake
include/odbc++/: Connection.hh  Environment.hh  Exports.h  FileStreamBuffer.hh  Handle.hh  SQLDiagnosticException.hh  WindowsCategory.hh
lib/: ODBC.pm
lib/ODBC/: SQL.pm
lib/X/: ODBC.pm
src/: sqlodbc.cc
src/dbcmd/: ChDirCommand.cc  ChDirCommand.hh  CommandHandler.cc  CommandHandler.hh  Context.cc  Context.hh  DiagnosticRecord.cc  DiagnosticRecord.hh  Drivers.cc  Drivers.hh  EchoCommand.cc  EchoCommand.hh  EnvCommand.cc  EnvCommand.hh  HandlerFunctor.cc  HandlerFunctor.hh  HelpCommand.cc  HelpCommand.hh  ShellCommand.cc  ShellCommand.hh  browseConnect.cc  browseConnect.hh
src/odbc++/: Connection.cc  Environment.cc  FileStreamBuffer.cc  Handle.cc  WindowsCategory.cc
t/: 00-base.t
